Fix table rendering: - Change text color to fg color in dark mode - Stop squishing text in tables

--- a/assets/style-sheet.css
+++ b/assets/style-sheet.css
@@ -22,3 +22,21 @@
     padding-bottom: 25px !important;
     border-radius: 10px;
 }
+
+html.dark .dataframe {
+    color: var(--color-foreground-primary);
+}
+
+table.dataframe {
+  width: auto !important;
+  max-width: none !important;
+}
+
+
+/* 2. Force the nbconvert wrapper to scroll horizontally */
+/* .output_html, 
+.output_subarea {
+  overflow-x: auto !important;
+  display: block !important;
+  max-width: 100% !important;
+} */
